php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39845 Persistent connections and PostgreSQL
Submitted: 2006-12-15 16:09 UTC Modified: 2006-12-18 17:57 UTC
From: olivier at elma dot fr Assigned:
Status: Closed Package: PDO related
PHP Version: 5.2.0 OS: Debian unstable
Private report: No CVE-ID: None
 [2006-12-15 16:09 UTC] olivier at elma dot fr
Description:
------------
Since I upgraded from php 5.1.x to php 5.2.0 persistent connections doesn't work anymore.
PDO keeps telling me the driver does not support this functionnality.

Reproduce code:
---------------
<?php
try {
   $dbh = new PDO('pgsql:host=localhost dbname=amarok user=slaanesh', 'slaanesh', 'XXXXXX', array(PDO::ATTR_PERSISTENT => true));
   echo "Connected\n"; 
} catch (Exception $e) {
   echo "Failure: " . $e->getMessage();
}
?>


Expected result:
----------------
Connected

Actual result:
--------------
Warning: PDO::__construct(): SQLSTATE[IM001]: Driver does not support this function: driver does not support setting attributes in /home/slaanesh/pdo.php on line 3
Connected


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-12-15 16:16 UTC] olivier at elma dot fr
Just to be more specific about my php version:
$ php --version
PHP 5.2.0-7 (cli) (built: Nov 24 2006 14:36:54)
Copyright (c) 1997-2006 The PHP Group
Zend Engine v2.2.0, Copyright (c) 1998-2006 Zend Technologies
 [2006-12-18 17:57 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 05:00:01 2026 UTC