Fixed bug #39845 (Persistent connections generate a warning in pdo_pgsql).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@225238 c90b9560-bf6c-de11-be94-00142212c4b1